[package]
name = "rust_web_app"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets"] }
rocket-multipart-form-data = "0.10.7"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
html-escape = "0.2.13"
tokio = { version = "1.37.0", features = ["full"] }
infer = "0.15.0"
log = "0.4.21"
simplelog = "0.12.2"
sled = "0.34.6"
chrono = "0.4.19"
uuid = { version = "1.2.0", features = ["v4"] }

[profile.release]
opt-level = "z"
